trunk/appointment/src/objects/zConsoleView__c.object
<CustomObject>
    <fields>
        <fullName>List_1_Id__c</fullName>
        <label>List 1 Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_2_Id__c</fullName>
        <label>List 2 Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_3_Id__c</fullName>
        <label>List 3 Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab__c</fullName>
        <label>Tab</label>
        <picklist>
            <picklistValues>
                <fullName>Pay Periods</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Console_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>zConsoleView</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zConsoleViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>